Fixed width and overflow problem
- Changed body and html width CSS to always take up maximum width.

- Hide overflow to prevent white bar appearing when screen is shrunk to being very narrow.

--- a/home_styles.css
+++ b/home_styles.css
@@ -26,4 +26,7 @@
 
 
 /* Company info styles */
+#companyInfoContainer {
+    width: 100%;
+}
 /* Products section styles */
