--- a/main_styles.css
+++ b/main_styles.css
@@ -14,9 +14,12 @@
 }
 
 * {
+    box-sizing: border-box;
     font-family: AppleGothic, sans-serif;
 }
-body {
+html, body {
+    overflow: hidden;
+    max-width: 100vw;
     margin: 0;
 }
 h1 {
