--- a/nav_styles.css
+++ b/nav_styles.css
@@ -18,7 +18,6 @@
 }
 #navContainer ul {
     display: flex;
-    width: 70vw;
     height: 10vh;
     min-height: 90px;
     margin: 0 auto 0 auto;
